Update apend_b.tex, kompleksitet.tex, and 4 more files...

--- a/incl/main/appendicer/apend_b.tex
+++ b/incl/main/appendicer/apend_b.tex
@@ -27,8 +27,8 @@ Så gælder, at
 Da (a) er et tilfælde af (b), hvor $k=0$, er beviset for (b) tilstrækkeligt.
 Hvis alle vektorer $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$ kan opnås som linearkombination af $\mathbf{v}_1,\ldots,\mathbf{v}_k$, så er alle vektorer i $\mathbf{v}_{1},\ldots,\textbf{v}_c$ ligeledes en linearkombination af $\mathbf{v}_1,\ldots,\mathbf{v}_k$, hvor $\mathbf{v}_1,\ldots,\mathbf{v}_k$ udgør en basis.
 Såfremt dette ikke er tilfældet, gælder det, at en eller flere vektorer i $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$ ikke er linearkombination af $\mathbf{v}_1,\ldots,\mathbf{v}_k$. 
-Der udvælges nu en lineær uafhængig vektor i $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$.
-Derved opnås der en mængde bestående af $k+1$ lineært uafhængige vektorer fra $\mathbf{v}_{1},\ldots,\mathbf{v}$.
-Den proces gentages $m-k$ gange og derved opnås basen af $\S$.
+Der udvælges nu en lineært uafhængig vektor blandt $\mathbf{v}_{k+1},\ldots,\textbf{v}_c$.
+Derved opnås der en mængde bestående af $k+1$ lineært uafhængige vektorer fra $\mathbf{v}_{1},\ldots,\mathbf{v}_c$.
+Den proces gentages $m-k$ gange og derved opnås en basis til $\S$.
 \end{proof}
 %
