--- a/incl/main/simplex_metoden/simplex_metoden_typer.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_typer.tex
@@ -118,7 +118,7 @@ Lad $l$ være det index af en række, som tilsvarer det laveste forhold,
 \frac{v_{B(l)}}{u_l} \leq \frac{v_{B(i)}}{u_i}.
 \end{align*}
 Søjlen $\mathbf{a}_{B(l)}$ forlader basen og søjlen $\mathbf{a}_j$ indtræder i basen. 
-\item Tilføj for hver række i tabellen en konstant multiplum af den $l$'te række, som er pivotrækken, så $u_l$, som er pivoteringsindgangen bliver lig med $1$ og alle andre indgange i pivotsøjlen bliver $0$. 
+\item Tilføj for hver række i tabellen en konstant multiplum af den $l$'te række, som er pivotrækken, så $u_l$, der er pivoteringsindgangen, bliver lig med $1$ og alle andre indgange i pivotsøjlen bliver $0$. 
 \end{enumerate}
 \end{tcolorbox}
 \noindent
