--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -1,3 +1,5 @@
+\newpage
+\noindent
 \section{Lineær uafhængighed}
 % 1.7
 En mængde af vektorer i $\R^n$ er enten \textit{lineært afhængige} eller \textit{lineært uafhængige}.
@@ -87,8 +89,6 @@ x_1
 = \mathbf{0}
 \end{align*}
 %
-\newpage
-\noindent
 %
 være opfyldt, hvis $x_1=x_2=0$ eller $x_1=-2$ og $x_2=1$. 
 Vektorerne i $\S_2$ er derfor lineært afhængige, fordi der er flere løsninger end den trivielle.
@@ -241,6 +241,8 @@ Med udgangspunkt i \ref{fisk} ses det, at de to vektorer i $\S_2$ er parallelle 
 Hvis det ikke ved inspektion kan afgøres, om en matrix er lineært afhængig eller lineært uafhængig, kan det undersøges ved at opstille en totalmatricen bestående af mængden af vektorer, hvor matricen derefter via rækkeopperationer omdannes til trappeform. 
 Hvis der er pivotindgange i alle søjlerne, er mængden af vektorer lineært uafhængige. Hvis der er frie variable, er mængden af vektorer derimod lineært afhængige.
 \\\\
+\newpage
+\noindent
 %
 % Eksempel
 % Virker stadig ufærdigt, vi snakker om det. 
@@ -479,8 +481,6 @@ Givet
 \right\},
 \end{align*}
 % 
-\newpage
-\noindent
 %
 opstilles koefficientmatricen, som omdannes til reduceret trappeform. 
 %
@@ -519,6 +519,9 @@ opstilles koefficientmatricen, som omdannes til reduceret trappeform.
   0 & 0 & 1 & 1 \\
 \end{block}
 \end{blockarray} \\
+%
+\end{align*}
+\begin{align*}
 %
 \xrightarrow{R_2 \rightarrow R_2+6R_3}&
 \begin{blockarray}{ccccc}
