--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -152,10 +152,10 @@ x_1 & x_2 & x_3 & x_4 & x_5 & b \\
 \end{equation*}
 %
 \end{eks}
-\\\\
-\phantom{hej}
-\\\\
-\phantom{hej}
-\\\\
-\phantom{hej}
-\\\\
+%\\\\
+%\phantom{hej}
+%\\\\
+%\phantom{hej}
+%\\\\
+%\phantom{hej}
+%\\\\
