--- a/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
+++ b/incl/main/linear_algebra/losning_til_lineare_ligningssystemer/loesning_til_lineaer.tex
@@ -1,4 +1,4 @@
-\newpage
+%\newpage
 \section{Løsning af lineære ligningssystemer}
 %
 Disse ligningssystemer kan løses ved hjælp af forskellige operationer,
@@ -136,7 +136,6 @@ Hvis der foretages en ombytning på række to og tre, da vil $B$ ligeledes være
 %
 \end{eks}
 %
-\newpage
 \noindent
 %
 Matricer kan yderligere reduceres til \textit{reduceret trappeform}.
@@ -153,6 +152,7 @@ En matrix er på \textbf{reduceret trappeform}, hvis den opfylder følgende krit
 %
 Bemærk, at den reducerede trappeform af en matrix $A$ vil blive noteret $A_R$.
 \\
+\newpage
 %
 \begin{eks}
 Jævnfør \ref{defn:redtrap} er
@@ -183,7 +183,6 @@ Metoden til at gøre dette ses i afsnit \ref{gauss}.
 \end{defn}
 \noindent
 %
-\newpage
 \begin{eks}
 \label{eks:pivot}
 Betragt matrix $A$ fra \ref{eks:trappe}. Pivotindgangene i $A$ er her markeret med blåt.
