--- a/fig/tikz/geometri/konveksfunktion.tex
+++ b/fig/tikz/geometri/konveksfunktion.tex
@@ -8,12 +8,13 @@
 %
 % Punkter og linje 
 % -------------------------------------------------------
-\draw[very thick, color = myblue] (1,3,0) .. controls (3,5,0) and (4.5,5,0) .. (7,3,0);
+\draw[very thick, color = myblue] (1,3,0) .. controls (4,8,0) .. (7,3,0);
 \draw[very thick, color=myred] (9,5,0) .. controls (10,8,0) and (11,1,0) .. (12,3,0);
 \draw[very thick, color=myred] (15,5,0) .. controls (14,8,0) .. (12,3,0);
-% and (13,3,0)
+\filldraw [black] (4,6.76,0) circle (2pt) node[above] {$\mathbf{u}_1$};
+\filldraw [black] (9.56,5.74,0) circle (2pt) node[above] {$\mathbf{u}_2$};
 %
 \end{tikzpicture}
-  \captionof{figure}{En konveks funktion markeret med blå, og en ikke-konveks funktion markeret med rød.}
+  \captionof{figure}{En konveks funktion markeret med blå, hvor $\mathbf{u}_1$ er et globalt maksimum, og en ikke-konveks funktion markeret med rød, hvor $\mathbf{u}_2$ er et lokalt maksimum.}
   \label{fig:julieerkonge}
 \end{center}
