Update pivoterings_lokke.tex and simplex_metoden_typer.tex

--- a/incl/main/simplex_metoden/simplex_metoden_typer.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_typer.tex
@@ -82,6 +82,7 @@ De første $m$ søjler er resultatet af matricen $\bar{B}^{-1}$.
 \end{enumerate}
 \end{tcolorbox}
 \noindent
+\newpage
 %
 %
 \subsection{Fuld-tabel implementeringen}
@@ -124,3 +125,4 @@ Søjlen $\mathbf{a}_{B(l)}$ forlader basen og søjlen $\mathbf{a}_j$ indtræder 
 \noindent
 %
 Bemærk, at det er denne implementering, som er brugt i afsnit \ref{afsnittet}.
+\newpage
